# ic-eth-starter-rust

./: Cargo.toml  Makefile  README.md  dfx.json  evm-rpc.did
rs/eth-starter/: Cargo.toml  eth-starter.did
rs/eth-starter/src/: crypto.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  memory.rs  tecdsa.rs  types.rs  utils.rs
